<resources>
    <string name="app_name">My Parking</string>

    <string name="btn_reservation">Reserve Now</string>
    <string name="home_page_heading">Customer Activity Home Page</string>
    <string name="parking_around_me">Parking Around Me</string>
    <string name="parking_at_destination">Parking at Destination</string>
    <string name="title_activity_parking_around">Map</string>
    <string name="title_activity_parking_at_destination">Map</string>
    <string name="streetTV">Street:</string>
    <string name="cityTV">City:</string>
    <string name="provinceTV">Province:</string>
    <string name="enter_cityHint">Enter city</string>
    <string name="postal_codeTV">Postal Code:</string>
    <string name="enter_streetHint">Enter street...</string>
    <string name="headingListView">Select a parking       </string>

    <string-array name="centennial_college">
        <item>Story Arts Lot\n\t951 Carlaw Ave, Toronto, ON M4K \n\t3M2\n</item>
        <item>Ashtonbee Lot \n\t75 Ashtonbee Rd B2-11 ​75, \n\tScarborough,\n\tON M1L 4C9\n</item>
        <item>Progress Lot \n\t941 Progress Ave, Scarborough, ON \n\tM1G 3T8\n</item>
        <item>Pickering Lot \n\t1340 Pickering Pkwy, Pickering, ON \n\tL1V</item>
        <item>Morning Side Lot \n\t755 Morningside Ave, Scarborough,\n\tON M1C 4Z4</item>
    </string-array>

    <string-array name="provinces">
        <item>ON</item>
        <item>AB</item>
        <item>VA</item>
    </string-array>
    <string name="enter_postal_codeHint">Enter Postal Code...</string>
    <string name="title_activity_destination_maps">Map</string>

    <string name="rv_heading">Reserve Your Spot Here</string>
    <string name="customer_name">Customer Name</string>
    <string name="parking_lot_name">Parking Lot Name</string>
    <string name="parking_lot_address">Parking Lot Address</string>
    <string name="timing">Timing of Booking</string>
    <string name="from">From </string>
    <string name="to">To</string>
    <string name="payment_options">Payments Options</string>
    <string name="rd_credit">Credit</string>
    <string name="rd_debit">Debit</string>
    <string name="credit_car_number">Card Number</string>
    <string name="expire_date">Expire Date</string>
    <string name="hint_month">MM/YY</string>
    <string name="security_code">Security Code</string>
    <string name="hint_security_code">XXX</string>
    <string name="btn_confirmation">Confirm Now</string>
    <string name="btn_clear">Clear</string>

    <string name="heading_receipt">Here is Your Receipt</string>

    <string name="message">Thanks you for using MyParking app</string>

    <string name="login_heading">Login With Your Credentials</string>
    <string name="user_ID">User ID</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register Now</string>
    <string name="btn_back">Back</string>
    <string name="admin_heading">Administrator Use Only</string>




    <string name="selection">Select User Login</string>
    <string name="loginUser">User Name:</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="reg_Form">User Registration Form</string>
    <string name="userID"><font size="20">User ID</font></string>
    <string name="userPass"><font size="20">Password</font></string>
    <string name="fName"><font size="20">First Name</font></string>
    <string name="lNam"><font size="20">Last Name</font></string>
    <string name="address"><font size="20">Address</font></string>
    <string name="city"><font size="20">City</font></string>
    <string name="pCode"><font size="20">Postal Code</font></string>
    <string name="enter_address">Enter Address</string>
    <string name="logo">LOGO</string>
    <string name="clear">Clear</string>
    <string name="find">Find</string>
    <string name="logout">LogOut</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
</resources>
