<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".Registration">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        app:srcCompat="@drawable/myparking_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/reg_Form"
        android:textSize="25dp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/editUserName"
            style="@style/registration_content"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#11000000"
            android:hint="@string/userID"
            android:inputType="number"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/editPassword"
            style="@style/registration_content"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#11000000"
            android:hint="@string/userPass"
            android:inputType="textPassword"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/editFName"
            style="@style/registration_content"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#11000000"
            android:hint="@string/fName"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/editLName"
            style="@style/registration_content"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#11000000"
            android:hint="@string/lNam"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/editAddress"
            style="@style/registration_content"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#11000000"
            android:hint="@string/address"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/editCity"
            style="@style/registration_content"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#11000000"
            android:hint="@string/city"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/editPostCode"
            style="@style/registration_content"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#11000000"
            android:hint="@string/pCode"
            android:textSize="18dp" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registerUser_OnClick"
        android:text="Save" />


</LinearLayout>